kubernetes/apps/whisper/whisper/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whisper
  namespace: whisper
  labels:
    app: whisper
spec:
  type: ClusterIP
  selector:
    app: whisper
  ports:
    - name: wyoming
      port: 10300
      targetPort: wyoming
      protocol: TCP
