kubernetes/apps/whisper/whisper/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whisper
  namespace: whisper
spec:
  hostnames:
    - whisper.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: whisper
          namespace: whisper
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
